# himymEngine

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  PHASE1_COMPLETE.md  README.md  editor_start.ps1  imgui.ini  project.json  project1.json  shader_presets_enhanced.txt  temp_curve_modal.cpp  test_mesh_render.bat
.github/: copilot-instructions.md
.github/copilot/: README.md
.github/copilot/agents/: build-system.agent.md  director.agent.md  docs.agent.md  editor-dev.agent.md  mesh-graphics.agent.md  music-system.agent.md  runtime-dev.agent.md  shader-author.agent.md
.github/copilot/instructions/: agent-customizations.instructions.md  coding-standards.instructions.md  opengl-patterns.instructions.md  size-optimization.instructions.md
PR/: CURVES_RUNTIME_USAGE.md  EDITOR_VISION.md  FROM_SCRATCH.md.original  FROM_SCRATCH_V2.md  GETTING_STARTED_NEW_PROJECT.md  LIBRARY_DESIGN.md  QUICK_START.md  README.md  REFACTORING_NOTES.md  ROADMAP.md  SUMMARY.md
PR/ai/: copilot-instructions.md
PR/ai/agents/: intro-runtime.agent.md  revision-director.agent.md  scene-block-editor.agent.md  shader-author.agent.md
PR/ai/instructions/: agent_customizations.instructions.md  intro_runtime.instructions.md  scene_block_editor.instructions.md  shader_author.instructions.md
PR/ai/prompts/: README.md
PR/architecture/: API-REFERENCE.md  API_REFERENCE.md  ARCHITECTURE.md  TECH-STACK.md
PR/context/: CODE_STYLE.md  EXTENSION-GUIDE.md  OPENGL-EXPLAINER.md  PROJECT_GUIDELINES.md
PR/guides/: CONTROLS_KNOBS.md  EDITOR_GUIDE.md  MESH_GUIDE.md  SHADER_GUIDE.md
PR/tools/: SHADER_TOOLS.md
Salute/: cues.txt  pack_cache.txt  project.json
Salute/project_assets/: hardwired intro.mod  hardwired intro.xm  moon.glb  silents_textured.glb  sofa.glb
assets/: cues.txt
assets/3dgltfs/: aaad.glb  box.glb  cwar.glb  mono3.glb  plane.glb  road.glb  world.glb
assets/music/: book_of_memories2.mod  track01.xm
assets/shader/: fragment.glsl  presets.txt  shader_common.glsl  shader_footer.glsl  vertex.glsl
assets/shader/scenes/: 00_nebula_drift.glsl  01_ribbon_aurora.glsl  02_nocturne_fog.glsl  03_plasma_tunnel.glsl  04_dune_waves.glsl  05_crystal_grid.glsl  06_storm_cells.glsl  07_liquid_metal.glsl  08_sunburst.glsl  09_moire_flow.glsl  10_fbm_lightning.glsl  11_polar_swirl.glsl  12_fbm_product.glsl  13_sweep_rings.glsl  (+25 more)
assets/textures/: project.json
demos/: skyliner.glb
demos/3d town/: cues.txt  pack_cache.txt  project.json
demos/3dtest/: cues.txt  pack_cache.txt  project.json
demos/lilbox/: cues.txt  pack_cache.txt  project.json
demos/shadertest/: cues.txt  pack_cache.txt  project.json
demos/testingshadersonassets/: cues.txt  pack_cache.txt  project.json
examples/animated_intro/: CMakeLists.txt  README.md  main.cpp
examples/demo_intro/: CMakeLists.txt  README.md  main.cpp
examples/editor_app/: CMakeLists.txt  README.md  main.cpp
examples/export_test/: CMakeLists.txt  main.cpp
examples/indexed_test/: CMakeLists.txt  main.cpp
examples/mesh_demo/: CMakeLists.txt  main.cpp
examples/minimal_intro/: CMakeLists.txt  README.md  main.cpp
examples/simple_test/: CMakeLists.txt  main.cpp
imports/: sadsong.xm  skyliner.glb
intros/1/: cues.txt  pack_cache.txt  project.json
intros/2/: cues.txt  pack_cache.txt  project.json
intros/3/: cues.txt  pack_cache.txt  project.json
intros/3test/: cues.txt  pack_cache.txt  test3.json
intros/4test/: cues.txt  pack_cache.txt  project.json
intros/barebone/: cues.txt  pack_cache.txt  project.json
intros/freshone/: cues.txt  pack_cache.txt  project.json
intros/music_switch_test/: cues.txt
intros/newone/: cues.txt  pack_cache.txt  project.json
intros/newtest/: Newtest.json  cues.txt  pack_cache.txt
intros/scrolltext/: cues.txt  pack_cache.txt  project.json
intros/testintro/: cues.txt  project.json
intros/yea3h/: cues.txt  pack_cache.txt  project.json
revision_libs/rev_curve/: CMakeLists.txt
revision_libs/rev_curve/include/: rev_curve.h
revision_libs/rev_curve/src/: curve.cpp
revision_libs/rev_editor/: CMakeLists.txt  README.md  SHADER_EXAMPLE.cpp  SHADER_SYSTEM.md
revision_libs/rev_editor/include/: rev_editor.h
revision_libs/rev_editor/src/: editor_context.cpp  editor_internal.h  editor_modals.cpp  editor_panels.cpp  shader_presets.cpp  shader_presets.h
revision_libs/rev_gltf/: CMakeLists.txt
revision_libs/rev_gltf/include/: rev_gltf.h
revision_libs/rev_gltf/src/: rev_gltf.cpp
revision_libs/rev_mesh/: CMakeLists.txt
revision_libs/rev_mesh/include/: rev_mesh.h
revision_libs/rev_mesh/src/: mesh.cpp
revision_libs/rev_pack/: CMakeLists.txt
revision_libs/rev_particles/: CMakeLists.txt
revision_libs/rev_particles/include/: rev_particles.h
revision_libs/rev_particles/src/: rev_particles.cpp
revision_libs/rev_pixel/: CMakeLists.txt
revision_libs/rev_pixel/include/: rev_pixel.h
revision_libs/rev_pixel/src/: rev_pixel.cpp
revision_libs/rev_platform/: CMakeLists.txt
revision_libs/rev_platform/include/: rev_platform.h
revision_libs/rev_platform/src/: platform_gl_loader.cpp  platform_timing.cpp  platform_win32.cpp
revision_libs/rev_runtime/: CMakeLists.txt
revision_libs/rev_runtime/include/: rev_runtime.h
revision_libs/rev_runtime/src/: rev_runtime.cpp
revision_libs/rev_sequence/: CMakeLists.txt
revision_libs/rev_sequence/include/: rev_sequence.h
revision_libs/rev_sequence/src/: sequence.cpp
revision_libs/rev_shader/: CMakeLists.txt
revision_libs/rev_shader/include/: rev_shader.h
revision_libs/rev_shader/src/: shader.cpp
revision_libs/rev_xm/: CMakeLists.txt  README.md
revision_libs/rev_xm/include/: rev_xm.h
revision_libs/rev_xm/src/: xm_player.cpp
satellittest/: cues.txt  pack_cache.txt  project.json
satellittest/project_assets/: sattelite.glb  uap.glb
tests/: text_animation_tests.cpp
thedemo2/: project.json
titan/: cues.txt  pack_cache.txt  project.json
titan/project_assets/: titanlogo.glb  uap.glb
tools/: TOOLCHAIN_INSTALL.md  install_and_prepare_local_build.cmd  install_himym_toolchain.cmd  install_himym_toolchain.ps1  pack_cli.cpp  runtime_sweep.ps1
(+44 files in other folders)
